{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 38,
  "lineage": "1673b8a3-0193-419b-f0d2-c24be8ee9efe",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-039a49e70ea773ffc",
            "arn": "arn:aws:ec2:us-east-1:328505048131:instance/i-0d3d4f7e225e31766",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3d4f7e225e31766",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0082e753a223a1e0b",
            "private_dns": "ip-10-0-0-171.ec2.internal",
            "private_ip": "10.0.0.171",
            "public_dns": "ec2-3-87-9-84.compute-1.amazonaws.com",
            "public_ip": "3.87.9.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e8968022009e937c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e70314eb6a08e5b1",
            "tags": {
              "Name": "DemoInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-093dcdb26df225994"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.ssh_key",
            "module.networking.aws_subnet.demo",
            "module.networking.aws_vpc.demo",
            "module.security.aws_security_group.demo_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-069cd749cd5aca2e2",
            "owner_id": "328505048131",
            "vpc_id": "vpc-04edb29a178ec2a29"
          },
          "dependencies": [
            "module.networking.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-063264f10150af76f",
            "owner_id": "328505048131",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069cd749cd5aca2e2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-04edb29a178ec2a29"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.demo",
            "module.networking.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d055c26330250ab",
            "route_table_id": "rtb-063264f10150af76f",
            "subnet_id": "subnet-0e70314eb6a08e5b1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.demo",
            "module.networking.aws_route_table.demo",
            "module.networking.aws_subnet.demo",
            "module.networking.aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cffd381e960a85ba",
            "route_table_id": "rtb-063264f10150af76f",
            "subnet_id": "subnet-0013b8feab20bb997"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.demo",
            "module.networking.aws_route_table.demo",
            "module.networking.aws_subnet.demo",
            "module.networking.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328505048131:security-group/sg-093dcdb26df225994",
            "description": "Security group for all nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093dcdb26df225994",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-sg",
            "name_prefix": null,
            "owner_id": "328505048131",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04edb29a178ec2a29"
          },
          "dependencies": [
            "module.networking.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328505048131:subnet/subnet-0e70314eb6a08e5b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e70314eb6a08e5b1",
            "map_public_ip_on_launch": false,
            "owner_id": "328505048131",
            "vpc_id": "vpc-04edb29a178ec2a29"
          },
          "dependencies": [
            "module.networking.aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328505048131:subnet/subnet-0013b8feab20bb997",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0013b8feab20bb997",
            "map_public_ip_on_launch": false,
            "owner_id": "328505048131",
            "vpc_id": "vpc-04edb29a178ec2a29"
          },
          "dependencies": [
            "module.networking.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328505048131:vpc/vpc-04edb29a178ec2a29",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f76f7c4acdd31e4c",
            "default_route_table_id": "rtb-058b116b67bc34f95",
            "default_security_group_id": "sg-035c5d12cbda6f277",
            "dhcp_options_id": "dopt-06b06a4d4c24ff67e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04edb29a178ec2a29",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-058b116b67bc34f95",
            "owner_id": "328505048131"
          }
        }
      ]
    }
  ]
}